crates/openracing-filters/tests/snapshots/snapshot_filters__inertia_sine_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -0.14776011,
    -0.13456114,
    -0.10934222,
    -0.07435608,
    -0.03272796,
    0.0118237,
    0.05531912,
    0.0938731,
    0.12404165,
    0.14312993,
    0.14943294,
    0.14238735,
    0.12262285,
    0.09190483,
    0.05297709,
    0.00931726,
    -0.03517504,
    -0.07652505,
    -0.11103957,
    -0.13563491,
    -0.14811479,
    -0.14736383,
    -0.13344903,
    -0.10761411,
    -0.07216604,
    -0.03027163,
    0.01432681,
    0.05764556,
    0.095815,
]
