crates/openracing-filters/tests/snapshots/snapshot_filters__notch_impulse_response_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.9282859,
    -0.1266259,
    -0.09044164,
    -0.05122905,
    -0.01298561,
    0.02095262,
    0.04811924,
    0.06701696,
    0.07711457,
    0.0787567,
    0.07300692,
    0.06144788,
    0.04596314,
    0.0285228,
    0.01099212,
    -0.005023,
    -0.01828467,
    -0.02798278,
    -0.03374718,
    -0.0356183,
    -0.0339845,
    -0.02949697,
    -0.02297276,
    -0.01529684,
    -0.00733188,
    0.0001569,
    0.00655733,
    0.01144391,
    0.01458974,
    0.01595864,
]
