crates/openracing-filters/tests/snapshots/snapshot_filters__notch_sine_at_center_frequency_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    0.28685611,
    0.50650322,
    0.64862233,
    0.71141917,
    0.7005645,
    0.6276083,
    0.5080871,
    0.35954028,
    0.19962883,
    0.04451329,
    -0.09239891,
    -0.20127821,
    -0.27625149,
    -0.31536919,
    -0.32021955,
    -0.29527679,
    -0.24708042,
    -0.18334556,
    -0.11209169,
    -0.04087211,
    0.02384613,
    0.07711558,
    0.1157374,
    0.13830298,
    0.1450647,
    0.13767485,
    0.11883474,
    0.09189847,
    0.06047578,
    0.02806395,
    -0.00224923,
    -0.02801017,
    -0.04753098,
    -0.05993277,
    -0.06510976,
    -0.063628,
    -0.05657702,
    -0.04539629,
    -0.03169404,
]
