crates/openracing-filters/tests/snapshots/snapshot_filters__notch_step_response_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.77286166,
    0.48882145,
    0.48471752,
    0.63459289,
    0.8242541,
    0.97963798,
    1.07044566,
    1.09920549,
    1.0856142,
    1.0529232,
    1.01945961,
    0.99545312,
    0.98369449,
    0.98209107,
    0.98650295,
    0.99289507,
    0.99848086,
    1.00197768,
    1.0033021,
    1.00305009,
    1.00201225,
    1.00085187,
    0.9999671,
    0.99949402,
    0.99938518,
    0.99950725,
    0.99971932,
    0.99991792,
    1.00005054,
    1.000108,
]
