crates/openracing-filters/tests/snapshots/snapshot_filters__slew_rate_sine_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    0.001,
    0.002,
    0.003,
    0.004,
    0.005,
    0.006,
    0.007,
    0.008,
    0.009,
    0.01,
    0.009,
    0.008,
    0.007,
    0.006,
    0.005,
    0.004,
    0.003,
    0.002,
    0.001,
    -0.0,
    0.001,
    0.002,
    0.003,
    0.004,
    0.005,
    0.006,
    0.007,
    0.008,
    0.009,
]
