crates/openracing-filters/tests/snapshots/snapshot_filters__slew_rate_step_down_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.99949998,
    0.99899995,
    0.99849993,
    0.99799991,
    0.99749988,
    0.99699986,
    0.99649984,
    0.99599981,
    0.99549979,
    0.99499977,
    0.99449974,
    0.99399972,
    0.9934997,
    0.99299967,
    0.99249965,
    0.99199963,
    0.9914996,
    0.99099958,
    0.99049956,
    0.98999953,
    0.98949951,
    0.98899949,
    0.98849946,
    0.98799944,
    0.98749942,
    0.98699939,
    0.98649937,
    0.98599935,
    0.98549932,
    0.9849993,
]
