crates/openracing-filters/tests/snapshots/snapshot_filters__slew_rate_step_up_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0005,
    0.001,
    0.0015,
    0.002,
    0.0025,
    0.003,
    0.0035,
    0.004,
    0.0045,
    0.005,
    0.0055,
    0.006,
    0.0065,
    0.007,
    0.0075,
    0.008,
    0.0085,
    0.009,
    0.0095,
    0.01,
    0.0105,
    0.011,
    0.0115,
    0.012,
    0.0125,
    0.013,
    0.0135,
    0.014,
    0.0145,
    0.015,
]
